force-app/main/default/objects/Account/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>IF(ISBLANK(BillingState), &quot;None&quot;,
IF(CONTAINS(&quot;AK:AZ:CA:HA:NV:NM:OR:UT:WA&quot;, BillingState), &quot;West&quot;,
IF(CONTAINS(&quot;CO:ID:MT:KS:OK:TX:WY&quot;, BillingState), &quot;Central&quot;,
IF(CONTAINS(&quot;CT:ME:MA:NH:NY:PA:RI:VT&quot;, BillingState), &quot;East&quot;,
IF(CONTAINS(&quot;AL:AR:DC:DE:FL:GA:KY:LA:MD:MS:NC:NJ:SC:TN:VA:WV&quot;, BillingState), &quot;South&quot;,
IF(CONTAINS(&quot;IL:IN:IA:MI:MN:MO:NE:ND:OH:SD:WI&quot;, BillingState), &quot;North&quot;, &quot;Other&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>