force-app/main/default/objects/Account/fields/Deleted_Opty_Id__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Opty_Id__c</fullName>
    <label>Deleted_Opty_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>