force-app/main/default/objects/Account/fields/HasACase__c.field-meta.xml
<CustomField>
    <fullName>HasACase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasACase</label>
    <type>Checkbox</type>
</CustomField>