force-app/main/default/objects/Account/fields/Location_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Location_Type_c__c</fullName>
    <label>Location_Type__c</label>
    <length>12</length>
    <type>Text</type>
</CustomField>