force-app/main/default/objects/Account/fields/OpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAmount__c</fullName>
    <label>OpportunityAmount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>