force-app/main/default/objects/Account/fields/Salary_Min__c.field-meta.xml
<CustomField>
    <fullName>Salary_Min__c</fullName>
    <label>Salary Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>