force-app/main/default/objects/Account/fields/TestPhoneAccount__c.field-meta.xml
<CustomField>
    <fullName>TestPhoneAccount__c</fullName>
    <label>TestPhoneAccount</label>
    <type>Phone</type>
</CustomField>