force-app/main/default/objects/Account/fields/Web_Site__c.field-meta.xml
<CustomField>
    <fullName>Web_Site__c</fullName>
    <label>Web Site</label>
    <type>Url</type>
</CustomField>