force-app/main/default/objects/Account/recordTypes/Marketing_RT.recordType-meta.xml
<RecordType>
    <fullName>Marketing_RT</fullName>
    <active>true</active>
    <label>Marketing RT</label>
</RecordType>