force-app/main/default/objects/Account/validationRules/Account_Number_Is_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Is_Numeric</fullName>
    <active>false</active>
    <description>Validates that the Account Number is numeric if not blank.</description>
    <errorConditionFormula>AND( 
 NOT(ISBLANK(AccountNumber)), 
 NOT(ISNUMBER(AccountNumber)) 
 )</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account Number is not numeric.</errorMessage>
</ValidationRule>