force-app/main/default/objects/Account/validationRules/Date_Must_Be_in_the_Current_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Must_Be_in_the_Current_Year</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR( My_Date__c ) &lt;&gt;  YEAR( TODAY() )</errorConditionFormula>
    <errorDisplayField>My_Date__c</errorDisplayField>
    <errorMessage>Date must be in the current year.</errorMessage>
</ValidationRule>