force-app/main/default/objects/Account/validationRules/Number_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Range_Validation</fullName>
    <active>true</active>
    <description>Validates that the range between two custom fields, Salary Min and Salary Max, is no greater than $20,000</description>
    <errorConditionFormula>(Salary_Max__c  -  Salary_Min__c )&lt; 20000</errorConditionFormula>
    <errorDisplayField>Salary_Max__c</errorDisplayField>
    <errorMessage>Salary range must be within $20,000. Adjust the Salary Max or Salary Min values.</errorMessage>
</ValidationRule>