force-app/main/default/objects/Account/validationRules/Website_Extension.validationRule-meta.xml
<ValidationRule>
    <fullName>Website_Extension</fullName>
    <active>false</active>
    <description>Validates a custom field called Web Site to ensure that its last four characters are in an explicit set of valid website extensions.</description>
    <errorConditionFormula>AND(RIGHT( Web_Site__c, 4) &lt;&gt; &quot;.COM&quot;,
   RIGHT( Web_Site__c, 4) &lt;&gt; &quot;.com&quot;,
   RIGHT( Web_Site__c, 4) &lt;&gt; &quot;.ORG&quot;,
   RIGHT( Web_Site__c, 4) &lt;&gt; &quot;.org&quot;,
   RIGHT( Web_Site__c, 4) &lt;&gt; &quot;.NET&quot;,
   RIGHT( Web_Site__c, 4) &lt;&gt; &quot;.net&quot;
)</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Web Site must have an extension of .com, .org, or .net</errorMessage>
</ValidationRule>